# 1c-buddy

./: .env.example  Dockerfile  README.md  README_FULL.md  pyproject.toml  requirements.txt
app/: __init__.py  __main__.py  chat_custom_tools.py  cli.py  cli_support.py  config.py  http_client.py  main.py  onec_client.py
app/chat/: router.py
app/chat/static/: app.js  index.html  styles.css
app/mcp/: constants.py  exceptions.py  handlers.py  http_transport.py  service.py  session.py  stdio_server.py  tool_catalog.py  upstream_tools_client.py  validation.py
mcp-package/: README.md  pyproject.toml
mcp-package/src/onec_buddy_mcp/: __init__.py  cli.py  http_app.py
